Fixed font size issue on mobile browsers

--- a/server/resources/css/style.scss
+++ b/server/resources/css/style.scss
@@ -5,6 +5,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 #content {
